syntax = "proto3";

package proto;

option go_package = "github.com/mhakash/grpc-go-learn/calculator/proto";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse);
}